# devtest

solution/: pyproject.toml  readme.md
solution/api/: api.py
solution/database/: elevator.db
solution/ml_pipeline/: feature_engineering.py  feature_store.yaml  prediction.py  training.py
solution/ml_pipeline/data/: feature_engineered_data.csv  feature_engineered_data.parquet  online_store.db  registry.db
solution/ml_pipeline/models/: random_forest_model.joblib
solution/simulated_sensors/: demand_sensor.py  state_sensor.py
